# Speed_Recommends

./: .gitignore  Procfile  README.md  db.sqlite3  environment.yaml  manage.py  pyproject.toml  requirements.txt
core/: admin.py  urls.py  views.py
core/management/commands/: import_games.py
core/migrations/: 0001_initial.py  0002_recommendsiteuser_interaction_count.py
core/models/: __init__.py  games.py  reviews.py  saved.py  users.py
core/recommend/: likes.py  reviews.py  utils.py
core/saved/: services.py
core/search/: search.py
project/: settings.py
speed_recommends/: settings.py  urls.py  wsgi.py
templates/: base.html  game_detail.html  home.html  recommend.html  search.html
testing/: populate_testing_database.ipynb
