[tool.poetry]
name = "speed-recommends"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
authors = ["Arjuna Bazaz <arjunabazaz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=5.2.4,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
