[tool.poetry]
name = "speed-recommends"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
authors = ["Arjuna Bazaz <arjunabazaz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=5.2.4,<6.0.0"
django-allauth = "^65.10.0"
dotenv = "^0.9.9"
pyjwt = "^2.10.1"
cryptography = "^45.0.5"
pandas = "^2.3.1"
scikit-learn = "^1.7.0"
numpy = "<2"
dj-database-url = "^2.1"
gunicorn = "^21.2"
whitenoise = "^6.6"
psycopg2-binary = "^2.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
